@@ -69,7 +69,7 @@
  * Local methods (for writing)
  */
 
-static const char badchars[] = "#*+/-@$";
+static const char badchars[] = "#*+/-@$[](){}";
 
 /** transforms given variables, scalars, and constant to the corresponding active variables, scalars, and constant */
 static
@@ -201,7 +201,7 @@ void appendLineWithIndent(
    appendLine(scip, file, linebuffer, linecnt, extension);
 }
 
-/** checks string for occurences of '#', '*', '+', '/', and '-' and replaces those by '_' */
+/** checks string for occurences of bad symbols and replace those by '_' */
 static
 void conformName(
    char*                 name                /**< string to adjust */
@@ -1890,7 +1890,7 @@ SCIP_RETCODE checkVarnames(
 
    SCIP_CALL( SCIPgetBoolParam(scip, "reading/gmsreader/replaceforbiddenchars", &replaceforbiddenchars) );
 
-   /* check if the variable names contain the symbols '#', '*', '+', '/', '-', or '@' */
+   /* check if the variable names contain any of the bad symbols */
    for( badchar = badchars; *badchar; ++badchar )
    {
       for( v = 0; v < nvars; ++v )
@@ -1952,7 +1952,7 @@ SCIP_RETCODE checkConsnames(
 
    SCIP_CALL( SCIPgetBoolParam(scip, "reading/gmsreader/replaceforbiddenchars", &replaceforbiddenchars) );
 
-   /* check if the constraint names contain the symbol '#', '*', '+', '/', '-', or '@' */
+   /* check if the constraint names contain any of the bad symbols */
    for( badchar = badchars; *badchar; ++badchar )
    {
       for( c = 0; c < nconss; ++c )
